# magds

./: Cargo.toml  README.md
src/: lib.rs
src/algorithm/: predict.rs
src/connection/: mod.rs  simple_agds_connection.rs  simple_connection.rs  simple_magds_connection.rs  universal_connection.rs
src/dynamic/: magds.rs  parser.rs  sensor.rs
src/experiment/: magds.rs  parser.rs  sensor.rs
src/graph/: magds.rs  mod.rs  parser.rs
src/neuron/: simple_neuron.rs
src/simple/: magds.rs  mod.rs  parser.rs  sensor.rs
