[package]
name = "magds"
version = "0.1.0"
edition = "2021"

[lib]
name = "magds"
path = "src/lib.rs"

[[bin]]
name = "magds"
path = "src/bin/main.rs"

[dependencies]
bionet-common = { git = "https://github.com/danbulnet/bionet-common.git", version = "0.1.0" }
asa-graphs = { git = "https://github.com/danbulnet/asa-graphs.git", version = "0.1.0" }
env_logger = "0.9.0"
log = "0.4.17"
polars = { version = "0.23.2", features = [ "zip_with", "csv-file", "temporal", "fmt", "dtype-slim" ] }

[dev-dependencies]
pretty_assertions = "1.2.1"
env_logger = "0.9.0"
